# CNTRL

./: .clippy.toml  .eslintrc.json  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  biome.json  eslint.config.js  fallback.mjs  package-lock.json  package.json  vitest.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci.yml  issue-assignment.yml  release.yml
docs/: ACCESSIBILITY.md  ARCHITECTURE.md  OPEN_SOURCE_CHECKLIST.md  ROADMAP.md  TAURI-LINUX.md  agent.md  ai-router.md  browser.md  intent.md  memory.md  plugin.md
examples/macros/: browser_cleanup.vibe  crypto_monitor.vibe  data_scrape.vibe  github_audit.vibe  morning_summary.vibe
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: ai.rs  browser.rs  intent.rs  macro_cmd.rs  memory.rs  mod.rs
src-tauri/src/services/: agent.rs  ai_router.rs  audit.rs  browser.rs  executor.rs  fallback.rs  keychain.rs  macro_dir.rs  macro_format.rs  mod.rs  planner.rs  privacy.rs  recorder.rs  scheduler.rs
src-tauri/src/services/ai/: gemini.rs  groq.rs  huggingface.rs  mod.rs  ollama.rs  openai_compat.rs  openrouter.rs  router.rs
src-tauri/src/services/background/: runtime.rs  worker.rs
src-tauri/src/services/intent/: mod.rs
src-tauri/src/services/memory/: db.rs  habits.rs  mod.rs  recall.rs
src-tauri/src/services/plugin/: manifest.rs  mod.rs  sandbox.rs
src-tauri/tests/: browser_integration.rs  intent_integration.rs  macro_integration.rs
src/components/: AuditViewer.css  AuditViewer.tsx  CommandBar.css  CommandBar.tsx  Icons.tsx  MacroLibrary.css  MacroLibrary.tsx  PluginManager.css  PluginManager.tsx  SettingsPage.css  SettingsPage.tsx  TabBar.css  TabBar.tsx  UrlBar.css  UrlBar.tsx  WebView.css  WebView.tsx  WindowControls.tsx
src/stores/: WindowControls.tsx  aiStore.ts  browserStore.ts  macroStore.ts
src/styles/: tokens.css
src/test/: App.test.tsx  setup.ts  types.test.ts
src/types/: ai.ts  browser.ts  index.ts
tests/: README.md
