[package]
name = "cntrl-browser"
version = "0.1.0"
description = "CNTRL Browser - Intent-based autonomous browsing"
authors = ["Antigravity"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cntrl_browser_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable", "test"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2.0.18"
uuid = { version = "1.23.1", features = ["v4", "serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
parking_lot = "0.12.5"
tauri-plugin-shell = "2.3.5"
tokio = { version = "1.52.1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
tauri-plugin-store = "2.4.2"
tauri-plugin-os = "2"
# OS keychain access (macOS Keychain, Windows Credential Manager, Linux Secret Service)
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
# Required for the Provider trait
async-trait = "0.1"
urlencoding = "2.1.3"

[dev-dependencies]
# Enables mocking in unit tests for provider HTTP calls
mockall = "0.13"


